--- a/1g/makefile
+++ b/1g/makefile
@@ -1,13 +1,13 @@
 VERZIJA=CDX
 MODUL=KAM
 
-PRGS=/cl/sigma/fmk/kam/main/1g/e.prg
+PRGS=/dev/fmk/kam/main/1g/e.prg
 CS=
 ASMS=
 
-include /cl/sigma/Makefile_clipper
+include /sclib/Makefile_clipper
 
-FMK_LIBS=fmk_roba.lib fmk_svi.lib fmk_pi.lib fmk_evn.lib fmk_sec.lib
+FMK_LIBS=fmk_roba.lib fmk_svi.lib fmk_pi.lib fmk_evn.lib fmk_sec.lib fmk_rab.lib
 
 SCLIB_LIBS=sc1g_arh.lib sc1g_ba.lib sc1g_cui.lib sc1g_db.lib sc1g_os.lib sc1g_ost.lib sc1g_par.lib sc1g_pr.lib sc1g_sif.lib sc1g_sql.lib sc1g_ut.lib sc2g_app.lib sc2g_db.lib sc1g_rpt.lib sc2g_cui.lib sc1g_key.lib 
 
@@ -22,20 +22,20 @@ OBJS=$(OBJPRGS) $(OBJCS) $(OBJASMS)
 all:    cleaneobj mod 
 
 cleaneobj:
-	rm -f /cl/sigma/fmk/kam/main/1g/e.obj
+	rm -f /dev/fmk/kam/main/1g/e.obj
 	
 mod: $(OBJS)
 	echo Prilikom kompilacije obj se napravi u tekucem direktoriju
 	echo a blinker opet trazi obj fajl u orig direktoriju
-	cp e.obj /cl/sigma/fmk/kam/main/1g/
-	/cl/sigma/form_blinker_lnk.sh $(LINKCMD)
-	/cl/sigma/form_blinker_lnk_2.sh $(FMKLIBCMD)
-	$(LINKEREXE) @_bl_.lnk   @_bl_2_.lnk $(DEBUGLINK) @H:\\CLIPPER\\$(VERZIJA)\\BL.LNK output e.exe
+	cp e.obj /dev/fmk/kam/main/1g/
+	/sclib/form_blinker_lnk.sh $(LINKCMD)
+	/sclib/form_blinker_lnk_2.sh $(FMKLIBCMD)
+	$(LINKEREXE) @_bl_.lnk BEGINAREA  @_bl_2_.lnk ENDAREA $(DEBUGLINK) @H:\\CLIPPER\\$(VERZIJA)\\BL.LNK output e.exe
 	cp e.exe $(EXEDEST)/$(MODUL).EXE
 
 zip:
-	rm -f /p/zipsig/fmk/$(MODUL).zip
-	/cl/sigma/zip.sh p:\\zipsig\\fmk\\$(MODUL).zip ..\\chs\\\*.chs \\cl\\sigma\\fmk\\svi\\\*.chs  $(EXEDOSDEST)\\$(MODUL).EXE 
+	rm -f /z/fmk/$(MODUL).zip
+	/sclib/zip.sh z:\\fmk\\$(MODUL).zip ..\\chs\\\*.chs \\dev\\fmk\\svi\\\*.chs  $(EXEDOSDEST)\\$(MODUL).EXE 
 
 
 
