--- a/db/1g/makefile
+++ b/db/1g/makefile
@@ -1,9 +1,9 @@
 VERZIJA=CDX
 MODUL=km_1db
 
-include /cl/sigma/Makefile_clipper
+include /sclib/Makefile_clipper
 
-SRCDOSROOT=h:\\cl\\sigma\\fmk\\kam\\db\\1g\\
+SRCDOSROOT=c:\\dev\\fmk\\kam\\db\\1g\\
 
 PRGS=db_cre.prg
 CS=
