--- a/main/2g/makefile
+++ b/main/2g/makefile
@@ -1,9 +1,9 @@
 VERZIJA=CDX
 MODUL=km_2ma
 
-include /cl/sigma/Makefile_clipper
+include /sclib/Makefile_clipper
 
-SRCDOSROOT=h:\\cl\\sigma\\fmk\\kam\\main\\2g\\
+SRCDOSROOT=c:\\dev\\fmk\\kam\\main\\2g\\
 
 PRGS=app.prg
 
