--- a/1g/makefile
+++ b/1g/makefile
@@ -1,6 +1,5 @@
 VERZIJA=CDX
 MODUL=KAM
-MODVER=1.w.0.1.6
 
 PRGS=/dev/fmk/kam/main/1g/e.prg
 CS=
@@ -35,16 +34,18 @@ mod: $(OBJS)
 	cp e.exe $(EXEDEST)/$(MODUL).EXE
 
 zip:
-	/sclib/zip.sh h:\\cs\\fmk\\binary\\$(MODUL).zip ..\\chs\\\*.chs \\dev\\fmk\\svi\\\*.chs  $(EXEDOSDEST)\\$(MODUL).EXE 
+	/sclib/zip.sh h:\\cs\\fmk\\binary\\$(MODUL).zip ..\\chs\\\*.chs \\dev\\fmk\\af\\cl-af\\svi\\\*.chs  $(EXEDOSDEST)\\$(MODUL).EXE 
 
 commit:
-	/sclib/commit.sh $(MODVER) h:\\cs\\fmk\\binary\\$(MODUL).zip
+	/sclib/commit.sh $(MODUL) h:\\cs\\fmk\\binary\\$(MODUL).zip
+	/sclib/commit.sh $(MODUL) h:\\cs\\fmk\\binary\\sfx\\$(MODUL).exe
 
 clean:
 	rm -f *.obj *.OBJ
 	rm -f $(OBJS) I$(MODULH).OBJ *.bak *.BAK
 
-
+7exe:
+	/sclib/7exe.sh h:\\cs\\fmk\\binary\\sfx\\$(MODUL).exe ..\\chs\\\*.chs \\dev\\fmk\\af\\cl-af\\svi\\\*.chs  $(EXEDOSDEST)\\$(MODUL).EXE 
 
 
 sfx:
