--- a/db/1g/makefile
+++ b/db/1g/makefile
@@ -1,28 +1,10 @@
 VERZIJA=CDX
 MODUL=km_1db
 
-include /sclib/Makefile_clipper
-
 SRCDOSROOT=c:\\dev\\fmk\\kam\\db\\1g\\
 
 PRGS=db_cre.prg
 CS=
 ASMS=
 
-OBJS=$(OBJPRGS) $(OBJCS) $(OBJASMS)
-
-all: $(OBJS)
-	rm -f $(MODUL).lib 
-	$(LIBEXE) $(MODUL) $(LIBCMD) ,,
-	cp $(MODUL).lib $(LIB_DEST)
-	
-clean:
-	rm -f *~
-	rm -f *.xref
-	rm -f *.xrefs
-	rm -f *.html
-	rm -f *.OBJ *.obj
-	rm -f xref_files
-	rm -f $(OBJS) *.bak *.BAK
-
-
+include $(SC_BUILD_HOME_DIR)/sclib/Makefile_clipper
