generisi rate za bankovne kamate init
git-svn-id: http://repos.sigma-com.net/dev/Fmk/KAM@3842 70ca12d9-96dc-0310-a6d6-b3c0cee7cb29

--- a/dok/1g/makefile
+++ b/dok/1g/makefile
@@ -4,7 +4,7 @@ MODUL=km_1dok
 
 SRCDOSROOT=c:\\dev\\fmk\\kam\\dok\\1g\\
 
-PRGS=unos.prg kckstopa.prg
+PRGS=unos.prg kckstopa.prg util.prg
 
 CS=
 ASMS=
