--- a/param/1g/makefile
+++ b/param/1g/makefile
@@ -1,12 +1,10 @@
 VERZIJA=CDX
 MODUL=km_1par
 
-
-SRCDOSROOT=c:\\dev\\fmk\\kam\\param\\1g\\
+SRCDOSROOT=$(BASEDOS)\\fmk\\kam\\param\\1g\\
 
 PRGS=params.prg
-
 CS=
 ASMS=
 
-include $(SC_BUILD_HOME_DIR)/sclib/Makefile_clipper
+include ../../../fmk_lib/Makefile_clipper
