--- a/rpt/1g/makefile
+++ b/rpt/1g/makefile
@@ -1,12 +1,10 @@
 VERZIJA=CDX
 MODUL=km_1rpt
 
+SRCDOSROOT=$(BASEDOS)\\fmk\\kam\\rpt\\1g\\
 
-SRCDOSROOT=c:\\dev\\fmk\\kam\\rpt\\1g\\
 PRGS=rpt_kart.prg
-
 CS=
 ASMS=
 
-
-include $(SC_BUILD_HOME_DIR)/sclib/Makefile_clipper
+include ../../../fmk_lib/Makefile_clipper
