--- a/db/1g/makefile
+++ b/db/1g/makefile
@@ -1,10 +1,10 @@
 VERZIJA=CDX
 MODUL=km_1db
 
-SRCDOSROOT=c:\\dev\\fmk\\kam\\db\\1g\\
+SRCDOSROOT=$(BASEDOS)\\fmk\\kam\\db\\1g\\
 
 PRGS=db_cre.prg
 CS=
 ASMS=
 
-include $(SC_BUILD_HOME_DIR)/sclib/Makefile_clipper
+include ../../../fmk_lib/Makefile_clipper
