--- a/dok/1g/makefile
+++ b/dok/1g/makefile
@@ -1,13 +1,10 @@
 VERZIJA=CDX
 MODUL=km_1dok
 
-
-SRCDOSROOT=c:\\dev\\fmk\\kam\\dok\\1g\\
+SRCDOSROOT=$(BASEDOS)\\fmk\\kam\\dok\\1g\\
 
 PRGS=unos.prg kckstopa.prg util.prg
-
 CS=
 ASMS=
 
-
-include $(SC_BUILD_HOME_DIR)/sclib/Makefile_clipper
+include ../../../fmk_lib/Makefile_clipper
