--- a/main/1g/makefile
+++ b/main/1g/makefile
@@ -1,11 +1,10 @@
 VERZIJA=CDX
 MODUL=km_1ma
 
-
-SRCDOSROOT=c:\\dev\\fmk\\kam\\main\\1g\\
+SRCDOSROOT=$(BASEDOS)\\fmk\\kam\\main\\1g\\
 
 PRGS=e.prg
 CS=
 ASMS=
 
-include $(SC_BUILD_HOME_DIR)/sclib/Makefile_clipper
+include ../../../fmk_lib/Makefile_clipper
