--- a/main/2g/makefile
+++ b/main/2g/makefile
@@ -1,11 +1,11 @@
 VERZIJA=CDX
 MODUL=km_2ma
 
-SRCDOSROOT=c:\\dev\\fmk\\kam\\main\\2g\\
+SRCDOSROOT=$(BASEDOS)\\fmk\\kam\\main\\2g\\
 
 PRGS=app.prg
 
 CS=
 ASMS=
 
-include $(SC_BUILD_HOME_DIR)/sclib/Makefile_clipper
+include ../../../fmk_lib/Makefile_clipper
