--- a/razdb/1g/makefile
+++ b/razdb/1g/makefile
@@ -1,11 +1,10 @@
 VERZIJA=CDX
 MODUL=km_1raz
 
-
-SRCDOSROOT=c:\\dev\\fmk\\kam\\razdb\\1g\\
+SRCDOSROOT=$(BASEDOS)\\fmk\\kam\\razdb\\1g\\
 
 PRGS=fin_kam.prg
 CS=
 ASMS=
 
-include $(SC_BUILD_HOME_DIR)/sclib/Makefile_clipper
+include ../../../fmk_lib/Makefile_clipper
