--- a/sif/1g/makefile
+++ b/sif/1g/makefile
@@ -1,12 +1,10 @@
 VERZIJA=CDX
 MODUL=km_1sif
 
-
-SRCDOSROOT=c:\\dev\\fmk\\kam\\sif\\1g\\
+SRCDOSROOT=$(BASEDOS)\\fmk\\kam\\sif\\1g\\
 
 PRGS=sifre.prg
 CS=
 ASMS=
 
-
-include $(SC_BUILD_HOME_DIR)/sclib/Makefile_clipper
+include ../../../fmk_lib/Makefile_clipper
